findbugs warnings fixes